GAMBIT Revision History
=======================
Full details can be found in the git log.  Only a summary of the
changes in each new version is given here.

v1.1.0
Feature release.
- Added support for Mathematica backends
- Added support for DDCalc 1.1.0 (featuring XENON-1T and PICO-60 2017)
- Renamed some SpecBit module functions
- Rearranged precision mass and precision spectrum module function dependency structure
- Updated PrecisionBit likelihoods to use PDG 2017 values
- Updated DecayBit decay data to use PDG 2017 values
- Added option for turning on loop corrections to direct detection cross-sections computed with DarkSUSY
- Made MicrOmegas use decays from GAMBIT as default
- Additional sanity checks in cmake compiler selection
- Fixed bug preventing proper operation of hdf5 combination with T-walk
- Improved dependency resolver suggestions for new yaml rules

v1.0.1 - June 2017
Bugfix release.
- Improved treatment of version numbers to avoid the case where someone downloads a tarball from GitHub and cannot build
- Fixed hdf5 printer compilation problem with gcc 7.1
- Added C++11 flags in gm2calc BOSS files to fix compatibility with gcc 7.1
- Fixed warning due to passing of both C++14 and C++11 flags to overall build
- Fixed duplicate ditch notifications at cmake time when ditch commands overlap
- Fixed race condition leading parallel builds of BOSSed backends to fail
- Hardened all(!) backends against issues caused when building them in parallel
- Incorporated pull requests from Joshua Ellis (polish MultiNest and python cmake treatments)
- Added --developer switch for turning off error raised when capability or model database is incomplete
- Removed leftover FlexibleSUSY linking debug output in cmake system
- Added interface to nulike 1.0.5

v1.0.0 - May 2017
Initial release in combination with first 9 papers.

v0.0.0 - Oct 2012
Csaba said "I think we should take over the world."  It sounded like a good idea at the time.